fix left alignment

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -27,7 +27,7 @@
   border-radius: 1.6em;
   box-shadow: 0px 4px 35px rgba(0, 0, 0, 0.25);
   overflow: hidden;
-  text-align: center;
+  text-align: left;
 }
 
 #chat-container.chat-left {
